--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,4 +21,4 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test ./src/MonProjet.Tests/MonProjet.Tests.csproj --no-build --verbosity normal
