--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,5 +20,7 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Build
+      run: dotnet build ./src/MonProjet/MonProjet.csproj --no-restore
     - name: Test
       run: dotnet test ./src/MonProjet.Tests/MonProjet.Tests.csproj --no-build --verbosity normal
