--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,6 +21,6 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Build
-      run: dotnet build ./src/MonProjet/MonProjet.csproj --no-restore
-    - name: Test
-      run: dotnet test ./src/MonProjet.Tests/MonProjet.Tests.csproj --no-build --verbosity normal
+      run: dotnet build ./src/myWebApp.csproj --no-restore
+    #- name: Test
+     # run: dotnet test ./src/MonProjet.Tests/MonProjet.Tests.csproj --no-build --verbosity normal
