--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,7 +19,11 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x
+        dotnet-version: 8.0.
+        
+    - name: Restore dependencies
+        run: dotnet restore ./src/myWebApp.csproj
+        
     - name: Build
       run: dotnet build ./src/myWebApp.csproj --no-restore
     #- name: Test
