--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,9 +31,10 @@ jobs:
 
     - name: Publish project 
       run: dotnet publish ./src/myWebApp.csproj -c Release -o ./publish
-
+   
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
-      with: 
-          username: ${{ thomas.renaux@epitech.eu }}
-          password: ${{ 56bov4Y2 }}
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    
