--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -46,6 +46,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
         
     - name: Build and push Docker image
+      if: steps.changes.outputs.backend == 'true'
       uses: docker/build-push-action@v6
       with:
         context: .
