--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,18 +27,18 @@ jobs:
     - name: Test
       run: dotnet test ./src/myWebApp.csproj --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./coverage
 
-    - name: Code Coverage Report
-      uses: irongut/CodeCoverageSummary@v1.3.0
-      with:
-        filename: coverage/**/coverage.cobertura.xml
-        badge: true
-        fail_below_min: true
-        format: markdown
-        hide_branch_rate: false
-        hide_complexity: true
-        indicators: true
-        output: both
-        thresholds: '60 80'
+    #- name: Code Coverage Report
+     # uses: irongut/CodeCoverageSummary@v1.3.0
+      #with:
+       # filename: coverage/**/coverage.cobertura.xml
+        #badge: true
+        #fail_below_min: true
+        #format: markdown
+        #hide_branch_rate: false
+        #hide_complexity: true
+        #indicators: true
+        #output: both
+        #thresholds: '60 80'
 
 #Docker 
 
