--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,15 +25,15 @@ jobs:
     - name: Build
       run: dotnet build ./src/myWebApp.csproj --configuration Release --no-restore
     - name: Test
-      run: dotnet test ./src/myWebApp.csproj --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./coverage
+      run: dotnet test ./src/myWebApp.csproj --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./TestResults
     
     - name: Report test results
       uses: bibipkins/dotnet-test-reporter@v1.5.4
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         comment-title: 'Unit Test Results'
-        results-path: ./coverage/**/*.trx
-        coverage-path: ./coverage/**/coverage.cobertura.xml
+        results-path: ./TestResults/**/*.trx
+        coverage-path: ./TestResults/**/coverage.cobertura.xml
         coverage-threshold: 80
 
 #Docker 
