--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,14 +27,14 @@ jobs:
     - name: Test
       run: dotnet test ./src/myWebApp.csproj --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./TestResults
     
-    - name: Report test results
-      uses: bibipkins/dotnet-test-reporter@v1.5.4
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        comment-title: 'Unit Test Results'
-        results-path: ./TestResults/**/*.trx
-        coverage-path: ./TestResults/**/coverage.cobertura.xml
-        coverage-threshold: 80
+   # - name: Report test results
+    #  uses: bibipkins/dotnet-test-reporter@v1.5.4
+     # with:
+      #  github-token: ${{ secrets.GITHUB_TOKEN }}
+       # comment-title: 'Unit Test Results'
+        #results-path: ./TestResults/**/*.trx
+        #coverage-path: ./TestResults/**/coverage.cobertura.xml
+        #coverage-threshold: 80
 
 #Docker 
 
@@ -44,7 +44,24 @@ jobs:
       with:
         filters: |
           backend:
-            - 'src/**'
+            - 'src/**/*.cs'
+            - 'src/**/*.csproj'
+            - 'src/**/*.sln'
+            - 'src/**/*.json'
+            - 'src/**/*.config'
+            - 'src/**/*.props'
+            - 'src/**/*.targets'
+            - 'src/**/*.yaml'
+            - 'src/**/*.yml'
+            - 'Dockerfile*'
+            - '!**/*.md'
+            - '!**/*.png'
+            - '!**/*.jpg'
+            - '!**/*.jpeg'
+            - '!**/*.svg'
+            - '!**/*.gif'
+            - '!**/*.ico'
+            - '!**/*.txt'
 
     - name: Log in to Docker Hub
       if: steps.changes.outputs.backend == 'true'
