--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build
       run: dotnet build ./src/myWebApp.csproj --configuration Release --no-restore
     - name: Run tests
-      run: dotnet test --no-build --configuration Release --logger "trx;LogFileName=test-results.trx" --results-directory TestResults
+      run: dotnet test ./src/myWebApp.csproj --no-build --configuration Release --logger "trx;LogFileName=test-results.trx" --results-directory TestResults
 
     - name: Publish test results
       uses: dorny/test-reporter@v1
